Migrate MTP native layer from JNI/C++ to Java FFM (#1)
* Migrate MTP native layer from JNI/C++ to Java FFM

Replace the JNI C++ bridge (libmtp.so via compiled .so) with hand-written
FFM bindings (Java 21 preview) that call libmtp directly via Linker and
MethodHandle. This eliminates the C++ compilation step and the deprecated
Gradle Software Model cpp plugin.

Key changes:
- New LibMTP.java: struct layouts (LIBMTP_raw_device_t, devicestorage_t,
  file_t) and downcall handles for all required libmtp symbols, including
  the previously unimplemented getChildItems and getFileContent operations
- MTPDeviceConnection: long pointer fields replaced with MemorySegment
- MTPDeviceBridge: all native method declarations removed; raw device
  allocation lifecycle tracked explicitly via LibMTP.free()
- build.gradle: replace cpp plugin + Software Model with plain java-library;
  Gradle wrapper bumped from 6.6.1 to 8.10; lombok plugin updated to 8.6;
  --enable-preview and --enable-native-access added

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* Add umockdev-based MTP test infrastructure

Replace the hard-coded real-device test with a fixture-driven test that
uses libumockdev to replay recorded USB ioctl traffic. Tests skip
gracefully when the umockdev preload library or fixture files are absent.

record-fixture.sh captures a new fixture from a live device; commit the
generated .umockdev and .ioctl files to make tests reproducible in CI.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* Migrate build scripts from Groovy DSL to Kotlin DSL

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* Implement MTP NIO filesystem SPI

- MTPPath: implement getRoot, getFileName, getParent, normalize, resolve,
  relativize, startsWith, endsWith, toRealPath, compareTo; fix getName
  and subpath (were calling wrong indices)
- MTPFileSystem: track open state, implement getRootDirectories,
  getFileStores, supportedFileAttributeViews, getPathMatcher
- MTPFileSto